css/main/main.css
/* General */
/* *, *::before, *::after {
  box-sizing: border-box;
} */
body {
  margin: 0px;
  padding: 0px;
  display: block;
  font-family: myFont;
  color: white;
}

@font-face {
  font-family: myFont;
  src: url("../../Fonts/NeueMaChina-Light.otf");
}
@font-face {
  font-family: 'Gilroy';
  src: url(../../Fonts/Gilroy-Light.otf);
}

@font-face{
  font-family: Gilroy;  
  src: url(../../Fonts/Gilroy-Light.otf);
}

/* Header */
.header p {
  margin: 0;
}

.header-section {
  background-image: url(../../img/background_header.png);
  min-height: 100dvh;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover
}

.header-section p {
  z-index: 100;
  position: absolute;
  width: 892px;
  height: 130px;
  left: 150px;
  top: 365px;
  font-style: normal;
  font-weight: 800;
  font-size: 50px;
  line-height: 130%;
  color: #ffffff;
}

.blue-box-area {
  z-index: 1;
  position: absolute;
  width: 816px;
  height: 65px;
  left: 150px;
  top: 447px;
  background: #2e2bd0;
}

.estimate-project {
  position: absolute;
  width: 280px;
  height: 280px;
  left: 150px;
  top: 645px;
  border: 2px solid #ffffff;
  box-sizing: border-box;
  border-radius: 100%;
}

.estimate-project a {
  text-decoration: none;
  color: white;
  font-style: normal;
  font-weight: 400;
  font-size: 30px;
  line-height: 130%;
  text-align: center;
  text-transform: uppercase;
  position: absolute;
  width: 160px;
  height: 78px;
  left: 60px;
  top: 101px;
}
/* What are our goals */
.what-are-our-goals {
  font-family: MyFont;
  min-height: 100dvh;
  margin: 12.5rem 9.375rem;
}
.waog-title-header {
  margin: 0 0 6.25rem 0;
  font-style: normal;
  font-weight: 400;
  font-size: 3.750rem;
  line-height: 3.625rem;
  color: #2F353F;
}
.waog-num {
  margin: 3.125rem 0 0 3.125rem;
  font-style: normal;
  font-weight: 400;
  font-size: 2.5rem;
  line-height: 2.438;
  color: #2E2BD0;
}
.woag-title {
  margin: 12.5rem 0 0 3.125rem;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 150%;
  color: #2F353F;
}
.woag-text {
  margin: 0 0 0 3.125rem ;
  font-family: 'Gilroy';
  font-style: normal;
  font-weight: 400;
  font-size: 30px;
  line-height: 150%;

  color: rgba(47, 53, 63, 0.7);
}
.waog-title-header {grid-area: title;}
.first-goal {grid-area: g1;  border: 1px solid gray; border-radius: 70px; min-height: 500px;}
.second-goal {grid-area: g2; border: 1px solid gray; border-radius: 70px; min-height: 500px;}
.third-goal {grid-area: g3;  border: 1px solid gray; border-radius: 70px; min-height: 500px;}
.fourth-goal {grid-area: g4; border: 1px solid gray; border-radius: 70px; min-height: 500px;}

.waog-pic1 {grid-area: pic1; min-height: 500px;}
.waog-pic2 {grid-area: pic2; min-height: 500px;}
.waog-pic3 {grid-area: pic3; min-height: 500px;}

.waog-pic1 img, 
.waog-pic2 img, 
.waog-pic3 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 70px; 
}

.waog-container {
  display: grid;
  grid-template-columns: repeat(6, minmax(0, 1fr));
  grid-template-rows: auto repeat(6, minmax(250px, auto));

  max-width: 1620px;
  margin: 0 auto;

  grid-template-areas: 
  'title title title title title title'
  'g1   g1     g2   g2     pic1 pic1'
  'g1   g1     g2   g2     pic1 pic1'
  'pic2 pic2   pic2 g3     g3   g3'
  'pic2 pic2   pic2 g3     g3   g3'
  'g4   g4     g4   g4     pic3 pic3'
  'g4   g4     g4   g4     pic3 pic3'
  ;
}

/* Why choose us? */

.why-choose-us {
  margin: 250px 150px;
  display: flex;
  justify-content: center;
  align-items: center;
}


.why-choose-us .teams p {
  color: lightgray;
  font-size: larger;
}

.why-choose-us p {
  color: gray;
  margin-left: 84px;
  font-size: 25px;
}

.why-choose-us .h1-name {
  font-size: 80px;
  font-weight: bolder;
  color: black;
  margin-left: 84px;
}

.why-choose-us .text-box p {
  margin: 0;
  margin-top: 35px !important;
  font-size: 37px;
}

.why-choose-us .text-box h2 {
  margin: 0;
  font-size: 45px;
}

.why-choose-us .container {
  display: flex;
}

.gray-bar {
  width: 2.5px;
  height: 100%;
  background-color: lightgray;
  border-radius: 15px;
}

.why-choose-us .text-box {
  margin-left: 150px;
}

.text-box .team-text {
  border: 1px solid gray;
  border-radius: 80px;
  margin-left: 84px;
  width: 1116px;
  height: 459px;
  font-size: 25px;
  padding: 45px;
}

.text-box .communication-text,
.text-box .solution-text,
.text-box .quality-text {
  border: 1px solid gray;
  border-radius: 80px;
  margin-left: 84px;
  width: 1116px;
  height: 459px;
  font-size: 25px;
  padding: 45px;
  display: none;
}

.why-choose-us h2 {
  margin-left: 80px;
  color: #2E2BD0;
}


.why-choose-us .team-bar,
.why-choose-us .communication-bar,
.why-choose-us .solution-bar,
.why-choose-us .quality-bar {
  background-color: #2E2BD0;
  height: 85px;
  width: 5px;
  position: relative;
  right: 1.2px;
  border-radius: 85px;
  display: none;
}

.why-choose-us .communication-bar {
  top: 155px;
}

.why-choose-us .solution-bar {
  top: 310px;
}

.why-choose-us .quality-bar {
  top: 467px;
}


.why-choose-us .sumarize {
  margin-bottom: 65px;
}

.why-choose-us .teams {
  font-size: 25px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-left: -25px;
}

.why-choose-us .menu-section {
  margin-left: 84px;
}

.why-choose-us .team-section p {
  color: #2E2BD0;
}

.team-name,
.communication-name,
.solution-name,
.quality-name {
  cursor: pointer;
}

.why-choose-us .gilroy-text {
  font-family: 'Gilroy';
}




/* Industries section */
@font-face {
        font-family: 'Gilroy';
        src: url('https://cdn.jsdelivr.net/gh/repalash/gilroy-free-webfont@fonts/Gilroy-Light.eot');
        src: local('Gilroy Light'), local('Gilroy-Light'),
        url('https://cdn.jsdelivr.net/gh/repalash/gilroy-free-webfont@fonts/Gilroy-Light.eot?#iefix') format('embedded-opentype'),
        url('https://cdn.jsdelivr.net/gh/repalash/gilroy-free-webfont@fonts/Gilroy-Light.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/repalash/gilroy-free-webfont@fonts/Gilroy-Light.ttf') format('truetype');
        font-weight: 300;
        font-style: normal;
    }




.section-industries {
  max-width: 1920px;
  margin-bottom: 250px;
  position: relative;
}



.industries {
  padding-left: 0;
  max-width: 1920px;
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0;
  margin: 0;
}

.industries .title {
  padding-left: 21vh;
  font-size: 60px;
  margin: 0px;
  padding-bottom: 80px;
  font-weight: 1000;
  width: 100%;
  text-align: left;
  margin-top: 40px;
}

.flex-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 0;
  width: 100%;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  margin-left: 5vh;
}

.industries .item {
  width: 506px;
  height: 460px;
  padding: 30px;
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-left: 16vh;
}

.industries img {
  width: 100px;
  height: 100px;
}

.industries h2 {
  font-size: 40px;
  margin-top: 10px;
  color: black;
  padding-top: 20px;
  padding-bottom: 20px;
  font-weight: 100;
  padding-top: 25px;
  line-height: 150%;
  margin-left: 0;
}

.industries hr {
  width: 100%;
  background-color: black;
}

.industries p {
  font-size: 24px;
  color: gray;
  line-height: 1.3;
  letter-spacing: 2px;
  font-family: Gilroy;
  letter-spacing: 3px;
  width: 506px;
}


body{
    font-family: myFont;
}


/* Used technologies */

.section-ut {
  max-width: 1920px;
  margin: 250px 150px;
  position: relative;
  height: 620px;
  padding: 0px 150px;
}

.title-technologies {
  font-size: 60px;
  font-weight: 400;
  margin-bottom: 70px;
  letter-spacing: -1px;
  width: 556px;
  height: 58px;
  margin-left: -15px;
  color: black;
}

.top-content {
  display: flex;
  justify-content: flex-end;
  margin-bottom: 110px;
}

.description {
  width: 634px;
  height: 144px;  
  color: #8d8d8d;
  font-size: 20px;
  line-height: 1.9;
  font-weight: 300;
  margin-right: 30rem;
  font-family: Gilroy;
}
.timeline {
  position: relative;
  width: 100%; 
  overflow: hidden;
}

.timeline-line {
  position: absolute;
  top: 14px;
  left: 0;
  right: 0;
  height: 1px;
  background: #d4d4d4;
  z-index: 1;
}

.timeline-items {
  display: grid;
  grid-template-columns: repeat(8, 1fr); 
  gap: 0;
  position: relative;
  z-index: 2;
  transition: gap 0.3s ease;
}

.timeline-items.expanded {
  gap: 20px; 
}

.timeline-item {
  position: relative;
  width: auto; 
  height: auto; 
  font-family: Gilroy;
}

.dot {
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background: #8f8f8f;
  margin-bottom: 28px;
  z-index: -1;
  margin-top: 7px;
  cursor: pointer;
  transition: background 0.2s ease;
}

.timeline-item.active .dot {
  background: #2E2BD0;
  box-shadow: 0 0 0 6px #2E2BD026, 0 0 14px 4px #2E2BD040
}
.tech-title {
  font-size: 18px;
  line-height: 130%;
  color: #6b6b6b;
  font-weight: 300;
  width: 202px;
  cursor: pointer;
  transition: font-size 0.2s ease, color 0.2s ease;
}

.timeline-item.active .tech-title {
  font-size: 26px;
  color: black;
  font-weight: 300;
  width: 255px;
  font-family: myFont;
}

.firstTitle {
  font-size: 18px;
  width: 220px;
  font-family: Gilroy;
}

.icon-box {
  width: 80px;
  height: 80px;
  border: 1.5px solid #5b4dff;
  border-radius: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 40px;
}

.icon-box img {
  width: 60px;
  height: 60px;
}



/* Get in touch with us */
.touch-with-us {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 60px;
  width: 100%;
  max-width: 1900px;
  padding: 80px;
  background: linear-gradient(135deg, #5e5be6, #6c68f3);
  border-radius: 80px;
  margin: 0 auto;
}
 
 
.left {
  width: 100%;
  display: flex;
  gap: 15px;
  flex-direction: row;
  justify-content: space-between;
}
 
.left h1 {
  min-width: 700px;
  font-size: 100px;
  line-height: 1.1;
  color: white;
}
 
 
.down {
  min-width: 700px;
  min-height: 61.5px;
  font-size: 24px;
  width: 48%;
}
 
.left p {
  width: 100%;
  margin-top: 100px;
  font-size: 20px;
  line-height: 1.1;
  color: #c3c0f4;
}
 
.left strong {
  color: white;
}
 
.download {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 30px;
  width: 300px;
  height: 55px;
  background: transparent;
  border: 1px solid rgba(255,255,255,0.4);
  border-radius: 10px;
  color: white;
  cursor: pointer;
  font-size: 18px;
  gap: 12px;
}
 
.upload-right {
  display: flex;
  gap: 60px;
  width: 100%;
}
 
 
.registration,.column1 {
  display: flex;
  flex-direction: column;
  gap: 30px;
  width: 50%;
}
 
.registration input,
.px, .px-download {
  width: 100%;
  background: transparent;
  border: none;
  border-bottom: 1px solid rgba(255,255,255,0.5);
  padding: 10px 0;
  font-size: 32px;
  color: white;
  outline: none;
}
 
.registration input::placeholder,.px::placeholder, .px-download::placeholder {
  color: #a9a7f2;
}


.px-download {
  width: 100%;
  display: flex;
  background: transparent;
  border: none;
  border-bottom: 1px solid rgba(255,255,255,0.5);
  padding: 10px 0;
  font-size: 32px;
  color: #a9a7f2;
}

.px-download::placeholder{
  font-family: myFont;
}

 
.submitt {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 180px;
  height: 55px;
  margin-top: 20px;
  background: white;
  border: none;
  border-radius: 10px;
  color: #2e2bd0;
  cursor: pointer;
  text-align: center;
  font-size: 18px;
}

.submitt1 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 180px;
  height: 55px;
  margin-top: 20px;
  background: white;
  border: none;
  border-radius: 10px;
  color: #2e2bd0;
  cursor: pointer;
  text-align: center;
  font-size: 18px;
  display: none;
}

.support-logo{
  display: none;
}

